--- a/site/index.html
+++ b/site/index.html
@@ -1,13 +1,14 @@
 <html>
     <head>
+		<meta charset="UTF-8" /> 
         <link type="text/css" rel="stylesheet" href="./res/style.css" />
     </head>
     <body>
         <div id="barmain">
             <ul>
-                <li class="buttonMenuBar"><a href="*">Inicio</a></li>
-                <li class="buttonMenuBar"><a href="*">Questoes</a></li>
-                <li class="buttonMenuBar"><a href="*">Tarefas</a></li>
+                <li class="button"><a href="./index.html">Inicio</a></li>
+                <li class="button"><a href="quest/index.html">Questões</a></li>
+                <li class="button"><a href="*#">Tarefas</a></li>
             </ul>
         </div>
         <br>
